# FastReactApp

./: Dockerfile  README.md  docker-compose.yml  mime.types  nginx.conf
.github/workflows/: build.yml
api/: Dockerfile  pyproject.toml
api/api/: main.py  run.py
site/: package-lock.json  package.json
site/src/: App.jsx
