[tool.poetry]
name = "fastreactapp"
version = "0.1.0"
description = "FastAPI backend with React frontend, Dockerized"
authors = ["GDWR <gregory.dwr@gmail.com>"]
packages = [
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "api.run:main"